Fixed align

--- a/content/assets/css/style.sass
+++ b/content/assets/css/style.sass
@@ -7,7 +7,7 @@
     clear: both
 
 
-$footerHeight: 180px
+$footerHeight: 128px
 
 div
   -webkit-box-sizing: border-box /* Safari/Chrome, other WebKit */
@@ -138,11 +138,12 @@ a
 
   #gallery
     float: left
-    width: 720px
+    width: 600px
+    margin-left: 120px
 
     img
       height: 120px
-      margin: 4px 0 4px 4px
+      margin: 4px 4px 4px 0
 
   #footerNote
     float: left
